# Sail-Wind

./: .gitignore  README.md  docker-compose.yml  passenger_wsgi.py  pyproject.toml  pytest.ini  pyvenv.cfg  requirements  requirements.txt  setup.py  wsgi.py
assets/: lake_set.json
flaskr/: auth.py  blog.py  db.py
flaskr/templates/blog/: create.html
logbook_server/: __init__.py  auth.py  blog.py  db.py  map_utils.py  track.py  user.py
logbook_server/static/: script.js  style.css
logbook_server/templates/: base.html
logbook_server/templates/auth/: login.html  register.html
logbook_server/templates/blog/: index.html  update.html
logbook_server/templates/track/: create.html  index.html  map.html  update.html
logbook_server/templates/user/: friends.html  posts.html  profile.html
logbook_server/uploads/: 2022-06-04_Finn_Segeln.gpx  2022-06-06_segeln_420er.gpx  2022-06-06_segeln_contender.gpx  2022-06-29_uben_ohne_Schwert.gpx
tests/: conftest.py  mongo_fixtures.py  test_auth.py  test_db.py  test_factory.py  test_track.py
tests/mongo_data/: tracks.yaml  users.yaml
var/flaskr-instance/: config.py
var/logbook_server-instance/: config.py
